# webcamlib

./: CMakeLists.txt  README.md  compile.txt
examples/: main.c
include/: wbcam2.h  webcam.h
src/: webcam_common.c  webcam_commono.c  webcam_linux.c  webcam_linux2.c  webcam_linuxo.c  webcam_win.cpp  webcam_win2.cpp
